...
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp">

    <EditText
        android:id="@+id/txt_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name_hint"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        tools:ignore="UnusedAttribute" />
...
